--- a/thesis.bib
+++ b/thesis.bib
@@ -778,6 +778,7 @@ View full text},
 
 @article{crotti_calmodulin_2013,
 	title = {Calmodulin {Mutations} {Associated} with {Recurrent} {Cardiac} {Arrest} in {Infants}},
+	volume = {127},
 	copyright = {Copyright © 2013, Circulation},
 	issn = {0009-7322, 1524-4539},
 	url = {http://circ.ahajournals.org/content/early/2013/02/05/CIRCULATIONAHA.112.001216},
@@ -786,6 +787,7 @@ View full text},
 Methods and Results—We ascertained two unrelated infants (probands) with recurrent cardiac arrest and dramatically prolonged QTc interval who were both born to healthy parents. The two parent-child trios were investigated using exome sequencing to search for de novo genetic variants. We then performed follow-up candidate gene screening on an independent cohort of 82 subjects with congenital long-QT syndrome without an identified genetic cause. Biochemical studies were performed to determine the functional consequences of mutations discovered in two genes encoding calmodulin. We discovered three heterozygous de novo mutations in either CALM1 or CALM2, two of the three human genes encoding calmodulin, in the two probands and in two additional subjects with recurrent cardiac arrest. All mutation carriers were infants who exhibited life-threatening ventricular arrhythmias combined variably with epilepsy and delayed neurodevelopment. Mutations altered residues in or adjacent to critical calcium binding loops in the calmodulin carboxyl-terminal domain. Recombinant mutant calmodulins exhibited several fold reductions in calcium binding affinity.
 Conclusions—Human calmodulin mutations disrupt calcium ion binding to the protein and are associated with a life-threatening condition in early infancy. Defects in calmodulin function will disrupt important calcium signaling events in heart affecting membrane ion channels, a plausible molecular mechanism for potentially deadly disturbances in heart rhythm during infancy.},
 	language = {en},
+	number = {9},
 	urldate = {2017-02-05},
 	journal = {Circulation},
 	author = {Crotti, Lia and Johnson, Christopher N. and Graf, Elisabeth and Ferrari, Gaetano M. De and Cuneo, Bettina F. and Ovadia, Marc and Papagiannis, John and Feldkamp, Michael D. and Rathi, Subodh G. and Kunic, Jennifer D. and Pedrazzini, Matteo and Wieland, Thomas and Lichtner, Peter and Beckmann, Britt-Maria and Clark, Travis and Shaffer, Christian and Benson, D. Woodrow and Kääb, Stefan and Meitinger, Thomas and Strom, Tim M. and Chazin, Walter J. and Schwartz, Peter J. and George, Alfred L.},
@@ -793,7 +795,7 @@ Conclusions—Human calmodulin mutations disrupt calcium ion binding to the prot
 	year = {2013},
 	pmid = {23388215},
 	keywords = {arrhythmia, calcium signaling, exome, sudden cardiac death, arrhythmia},
-	pages = {CIRCULATIONAHA.112.001216},
+	pages = {1009--1017},
 	annote = {calmodulin heart disease},
 	file = {Full Text PDF:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/7GQZUZV9/Crotti et al. - 2013 - Calmodulin Mutations Associated with Recurrent Car.pdf:application/pdf;Snapshot:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/2W4WE3F7/CIRCULATIONAHA.112.001216.html:text/html}
 }
@@ -934,11 +936,10 @@ Just as reference genome sequences revolutionized human genetics, reference maps
 	urldate = {2017-02-05},
 	booktitle = {Phage {Display} {In} {Biotechnology} and {Drug} {Discovery}},
 	publisher = {CRC Press},
-	author = {Pal, Gabor and Fellouse, FredericA},
+	author = {Pal, Gabor and Fellouse, Frederic A},
 	month = jul,
 	year = {2005},
-	note = {DOI: 10.1201/9780849359125.ch3
-DOI: 10.1201/9780849359125.ch3},
+	note = {DOI: 10.1201/9780849359125.ch3},
 	pages = {111--142},
 	annote = {NNK degeneracy},
 	file = {Snapshot:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/GQS9Z8U2/9780849359125.html:text/html}
@@ -2066,4 +2067,55 @@ View full text},
 	keywords = {Smt3, SUMO, Ubc9, ubiquitin-like, X-ray structure},
 	pages = {608--618},
 	file = {ScienceDirect Snapshot:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/66QSZKJD/S0022283607004603.html:text/html}
+}
+
+@article{fowler_enrich:_2011,
+	title = {Enrich: software for analysis of protein function by enrichment and depletion of variants},
+	volume = {27},
+	issn = {1367-4803},
+	shorttitle = {Enrich},
+	url = {https://academic.oup.com/bioinformatics/article/27/24/3430/306031/Enrich-software-for-analysis-of-protein-function},
+	doi = {10.1093/bioinformatics/btr577},
+	number = {24},
+	urldate = {2017-03-01},
+	journal = {Bioinformatics},
+	author = {Fowler, Douglas M. and Araya, Carlos L. and Gerard, Wayne and Fields, Stanley},
+	month = dec,
+	year = {2011},
+	pages = {3430--3431},
+	file = {Full Text PDF:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/AGDHBX5X/Fowler et al. - 2011 - Enrich software for analysis of protein function .pdf:application/pdf;Snapshot:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/GR4KJ9EC/Enrich-software-for-analysis-of-protein-function.html:text/html}
+}
+
+@article{rubin_enrich2:_2016,
+	title = {Enrich2: a statistical framework for analyzing deep mutational scanning data},
+	copyright = {© 2016, Published by Cold Spring Harbor Laboratory Press. This pre-print is available under a Creative Commons License (Attribution 4.0 International), CC BY 4.0, as described at http://creativecommons.org/licenses/by/4.0/},
+	shorttitle = {Enrich2},
+	url = {http://biorxiv.org/content/early/2016/09/25/075150},
+	doi = {10.1101/075150},
+	abstract = {Measuring the functional consequences of protein variants can reveal how a protein works or help unlock the meaning of an individual's genome. Deep mutational scanning is a widely used method for multiplex measurement of the functional consequences of protein variants. A major limitation of this method has been the lack of a common analysis framework. We developed a statistical model for estimating variant scores that can be applied to many experimental designs. Our method generates an error estimate for each score that captures both sampling error and consistency between replicates. We apply our model to one novel and five published datasets comprising 243,732 variants and demonstrate its superiority, particularly for removing noisy variants, detecting variants of small effect, and conducting hypothesis testing. We implemented our model in easy-to-use software, Enrich2, that can empower researchers analyzing deep mutational scanning data.},
+	language = {en},
+	urldate = {2017-03-01},
+	journal = {bioRxiv},
+	author = {Rubin, Alan F. and Lucas, Nathan and Bajjalieh, Sandra M. and Papenfuss, Anthony T. and Speed, Terence P. and Fowler, Douglas M.},
+	month = sep,
+	year = {2016},
+	pages = {075150},
+	file = {Full Text PDF:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/VT2E3XV9/Rubin et al. - 2016 - Enrich2 a statistical framework for analyzing dee.pdf:application/pdf;Snapshot:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/TNRTNKZU/075150.html:text/html}
+}
+
+@article{bloom_software_2015,
+	title = {Software for the analysis and visualization of deep mutational scanning data},
+	volume = {16},
+	issn = {1471-2105},
+	url = {http://dx.doi.org/10.1186/s12859-015-0590-4},
+	doi = {10.1186/s12859-015-0590-4},
+	abstract = {Deep mutational scanning is a technique to estimate the impacts of mutations on a gene by using deep sequencing to count mutations in a library of variants before and after imposing a functional selection. The impacts of mutations must be inferred from changes in their counts after selection.},
+	urldate = {2017-03-01},
+	journal = {BMC Bioinformatics},
+	author = {Bloom, Jesse D.},
+	year = {2015},
+	keywords = {Amino-acid preferences, deep mutational scanning, Sequence logo},
+	pages = {168},
+	annote = {Pages 168 in PDF},
+	file = {Full Text PDF:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/4DSH7DUP/Bloom - 2015 - Software for the analysis and visualization of dee.pdf:application/pdf;Snapshot:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/2NRHGQ3C/s12859-015-0590-4.html:text/html}
 }
